# parsimathious

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/parsimathious/: __init__.py  grammar.py  parser.py
tests/: test_grammar.py  test_parser.py
