[project]
name = "parsimathious"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simone Sturniolo", email = "simonesturniolo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "parsimonious>=0.11.0",
]

[project.scripts]
parsimathious = "parsimathious:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
