[project]
name = "parsimathious"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simone Sturniolo", email = "simonesturniolo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "parsimonious>=0.11.0",
]

[project.scripts]
parsimathious = "parsimathious:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest tests"